--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "base_generic.html" %}
 
+{% block title%}
+  <title>Nathan's Little Library</title>
+{% endblock %}
 {% block content %}
   <h1>Local Library Home</h1>
   <p>
@@ -13,5 +16,7 @@
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <li><strong>Book with Dune in the Title:</strong> {{ num_dune }}</li>
+    <li><strong>Genres with Fiction in the Name:</strong> {{ num_fiction }}</li>
   </ul>
 {% endblock %}
