last bit of section 7 of the tutorial

--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -19,4 +19,8 @@
     <li><strong>Book with Dune in the Title:</strong> {{ num_dune }}</li>
     <li><strong>Genres with Fiction in the Name:</strong> {{ num_fiction }}</li>
   </ul>
+
+  <p>
+  You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.
+</p>
 {% endblock %}
