--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -24,6 +24,19 @@
               <li><a href="{% url 'books' %}">All books</a></li>
               <li><a href="{% url 'authors' %}">All authors</a></li>
             </ul>
+            <ul class="sidebar-nav">
+              {% if user.is_authenticated %}
+                <li>User: {{ user.get_username }}</li>
+                <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+                <li><a href="javascript:void(0)" onclick="document.getElementById('logout-form').submit()">Logout</a></li>
+                <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
+                  {% csrf_token %}
+                </form>
+              {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+              {% endif %}
+            </ul>
+
           {% endblock %}
         </div>
         <div class="col-sm-10 ">{% block content %}{% endblock %}
