--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -28,6 +28,9 @@
               {% if user.is_authenticated %}
                 <li>User: {{ user.get_username }}</li>
                 <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+                {% if perms.catalog.can_mark_returned %}
+                  <li><a href="{% url 'borrowed' %}">All Borrowed Books</a></li>
+                {% endif%}
                 <li><a href="javascript:void(0)" onclick="document.getElementById('logout-form').submit()">Logout</a></li>
                 <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
                   {% csrf_token %}
